# storytime-demo

./: .dockerignore  .env.example  .gitignore  DEMO.md  Dockerfile  LLM_DIRECTOR.md  Makefile  README.md  docker-compose.app.yml  docker-compose.observability.yml  docker-compose.vendor.dynatrace.yml  docker-compose.vendor.newrelic.yml  pyproject.toml
.github/workflows/: pages.yml
config/: loki.yaml  otel-collector.yaml  prometheus.yml  storytime.toml  vendor.secret.env.example
config/deploy/: blue.env  green.env
config/governance/: blocked-sources.yaml
config/grafana/dashboards/: approval-resume.json  artifact-validation.json  failures-rejections.json  pipeline-overview.json  run-timeline.json  stage-duration.json
demo/: README.md
demo/fixtures/: 01-successful-golden-path.yaml  02-retryable-technical-failure.yaml  03-governance-blocked.yaml  04-needs-review-approval-gate.yaml  05-rerun-requested.yaml  06-completed-after-rerun.yaml  index.yaml
demo/governance/: demo-blocked-sources.yaml
demo/seed/: demo-golden-path.json  demo-golden-path.txt  demo-governance-blocked.json  demo-governance-blocked.txt  demo-needs-review.json  demo-needs-review.txt  demo-retryable-failure.json  demo-retryable-failure.txt
docs/: GUI_vision.md  action-execution-boundary.md  architecture-baseline.md  artifact-manifest.md  browser-storage-policy.md  canonical-state.md  command-reference.md  dashboard-guide.md  demo-reproducibility-checklist.md  demo-reviewer-checklist.md  demo-script.md  demo-talk-track.md  demo-walkthrough.md  demo.md  deployment-bluegreen-option-a.md  deployment-bluegreen-option-b.md  deployment-containerized.md  externalized-state-architecture.md  failure-mode-regression-hardening.md  failure-mode-test-matrix.md  final-portfolio-handoff.md  final-validation-summary.md  fresh-clone-checklist.md  fresh-clone-troubleshooting.md  frontend-backend-contract.md  frontend-gui-deferred-work-register.md  frontend-static-export-contract.md  handoff-state.md  interview-story-bank.md  interview-talking-points.md  known-limitations.md  local-action-audit-spec.md  local-action-dto-spec.md  local-action-queue-observability.md  local-bridge-architecture.md  local-mode-storage-contract.md  local-mode-workspace-layout.md  local-setup-runbook.md  observability-demo.md  observability-governance-talking-points.md  (+60 more)
docs/examples/local-action-audit-records/: retry-failed-stage.audit.example.json
docs/examples/local-action-requests/: inspect-trust-envelope.request.example.json  refresh-export.request.example.json  retry-failed-stage.request.example.json
docs/examples/local-action-responses/: refresh-export.accepted.example.json  retry-failed-stage.accepted.example.json
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  navigation.ts  styles.css
frontend/src/components/: ActionPreviewPanel.module.css  ActionPreviewPanel.tsx  BoundaryLegend.tsx  ConsoleBadge.tsx  DemoWalkthroughView.module.css  DemoWalkthroughView.tsx  DisabledFutureActionCard.module.css  DisabledFutureActionCard.tsx  EvidenceValidationView.module.css  EvidenceValidationView.tsx  FailureRecoveryView.module.css  FailureRecoveryView.tsx  GovernanceSafetyView.module.css  GovernanceSafetyView.tsx  HomePage.tsx  LiveProofView.module.css  LiveProofView.tsx  LocalActionLifecyclePanel.tsx  LocalBridgeStatusPanel.tsx  LocalBridgeView.module.css  LocalBridgeView.tsx  LocalQueueStatusPanel.tsx  LocalRetrySubmitPanel.tsx  ModeOverview.tsx  (+9 more)
scripts/: build-artifact.sh  run-frontdoor.sh  run-slot.sh  switch-slot.sh
src/storytime/: __init__.py  __main__.py  approval.py  config.py  doctor.py  operator_export.py  operator_queue.py  operator_rerun.py  pipeline.py
tests/: conftest.py  test_action_preview_data_integrity.py  test_approval_gate.py  test_archive_hygiene.py  test_artifact_envelope.py  test_artifact_store.py  test_assemble_stage.py  test_audio_gate.py  test_blocked_sources.py  test_byte_ranges.py  test_cli_surface.py  test_cloud_boundary_readiness.py  test_cloud_distributed_baseline_doc.py  test_containerization.py  test_contracts_as_built_doc.py  test_dashboards.py  test_demo_fixtures.py  test_demo_harness.py  test_demo_walkthrough_canonical.py  test_deployment.py  test_doctor.py  test_encode.py  test_episode_catalog.py  test_failure_mode_regression.py  test_frontdoor.py  test_frontend_bridge_observability.py  test_frontend_controlled_retry_submission.py  test_frontend_operator_gui_polish.py  test_frontend_static_export_reload.py  test_governance_gate.py  test_governance_pipeline.py  test_http_bind_safety.py  test_import_boundaries.py  test_imports.py  test_ingest_stage.py  test_legal_hallucination_gate.py  test_local_bridge_dto.py  test_local_bridge_queue.py  test_local_bridge_safety.py  test_local_bridge_server.py  (+35 more)
(+122 files in other folders)
