# StoryTime — project definition.
#
# ARCH-LOCK: Packaging & Layout
# DO NOT REFACTOR: Keep the src/ layout and the package name "storytime".
# Rationale: The locked Architecture Baseline (docs/architecture-baseline.md
# section 2-3) defines this layout. The src/ layout prevents accidental
# imports of the un-installed working tree and keeps the import graph honest.

[project]
name = "storytime"
version = "0.2.0"
description = "Local-first, observability-native content-to-audio pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "StoryTime RoundTable" }]

# Runtime dependencies. Lower bounds only; exact versions are pinned by
# uv.lock. Run `uv lock` then commit uv.lock to freeze the resolution.
dependencies = [
    "typer>=0.12,<1.0",
    "jsonschema>=4.20,<5.0",
    "opentelemetry-api>=1.20,<2.0",
    "opentelemetry-sdk>=1.20,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20,<2.0",
    # Phase 9B: storytime.governance.blocked_sources parses the local
    # config/governance/blocked-sources.yaml deny-list (Architecture Baseline
    # §24.9) at runtime, so PyYAML is a runtime dependency. It was already a
    # locked dev dependency (used by tests/test_dashboards.py); Phase 9B
    # promotes it to a runtime dependency. No code imports it elsewhere.
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
    "import-linter>=2.0,<3.0",
    "types-jsonschema>=4.20,<5.0",
    "types-pyyaml>=6.0,<7.0",
]

[project.scripts]
storytime = "storytime.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/storytime"]

# --------------------------------------------------------------------------
# Tooling configuration
# --------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TID"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # allow assert-style negative checks in tests

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["storytime"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
# Typer relies on decorator magic that mypy strict cannot fully model.
module = "storytime.cli.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

# ARCH-LOCK: Import Boundary Enforcement
# DO NOT REFACTOR: Do not delete or weaken these import-linter contracts.
# Rationale: Hard decisions 2 and 11 of the Architecture Baseline require that
# OpenTelemetry be confined to adapters/telemetry and that the events package
# remain a leaf. These contracts make those rules mechanically enforceable.
[tool.importlinter]
root_package = "storytime"
# Required because a forbidden contract names an external package (opentelemetry).
include_external_packages = true

[[tool.importlinter.contracts]]
name = "OpenTelemetry is confined to the telemetry adapter"
type = "forbidden"
# allow_indirect_imports: the contract flags any module that DIRECTLY imports
# opentelemetry. The telemetry factory legitimately reaches the OTel adapter
# transitively; that is the factory's job and is not a violation.
allow_indirect_imports = "true"
source_modules = [
    "storytime.cli",
    "storytime.pipeline",
    "storytime.approval",
    "storytime.config",
    "storytime.doctor",
    "storytime.runner",
    "storytime.dto",
    "storytime.stages",
    "storytime.events",
    "storytime.manifest",
    "storytime.governance",
    "storytime.reporting",
    "storytime.operator_queue",
    "storytime.operator_rerun",
    "storytime.operator_export",
    "storytime.artifacts",
    "storytime.state",
    "storytime.rss",
    "storytime.runtime",
    "storytime.http",
    "storytime.frontdoor",
    "storytime.util",
    "storytime.adapters.tts",
    "storytime.adapters.storage",
]
forbidden_modules = ["opentelemetry"]

[[tool.importlinter.contracts]]
name = "events is a leaf package and imports nothing else internal"
type = "forbidden"
source_modules = ["storytime.events"]
forbidden_modules = [
    "storytime.cli",
    "storytime.runner",
    "storytime.dto",
    "storytime.stages",
    "storytime.manifest",
    "storytime.governance",
    "storytime.reporting",
    "storytime.operator_queue",
    "storytime.operator_rerun",
    "storytime.operator_export",
    "storytime.artifacts",
    "storytime.state",
    "storytime.rss",
    "storytime.http",
    "storytime.util",
    "storytime.adapters",
]
